# fimoda

./: .gitignore  README.md  pyproject.toml
fimoda/tabular/: FICO_data.py  README.md  further_train_classification.py  further_train_regression.py  tabular_classification.ipynb  tabular_regression.ipynb  training.py
fimoda/tabular/results/fico/: ind_loo.pt
fimoda/tabular/results/folktables/: ind_loo.pt
fimoda/text/: README.md  further_train_sst2.py  lissa_sst2.py  sst2_bert.ipynb  training_LM.py
fimoda/text/results/sst2/: ind_leave_out.pt
